# fpl-stats

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  scripts.py
.github/workflows/: ci.yml  daily_check.yml  linting_testing.yml
data/: combined_stats.csv
data/fpl-data/: 20210109_GW18_player_stats.csv  20210125_GW19_player_stats.csv
models/: combined_model_v1.pkl  player_info_1920_2021.csv  xP_baseline_v1.pkl
models/2019-20/: gw_38_1920_predictions.csv  gw_data_1920.csv  player_info_2021.csv  test.csv  unseen.csv  xP_baseline_v1.pkl
models/2020-21/: gw38_predictions_2021.csv  gw_data_2021.csv  player_info_2021.csv  test.csv  unseen.csv  xP_baseline_2021_v1.pkl
notebooks/: FPL optimizer.ipynb  data-sources-combined.ipynb  eda_combined_stats.ipynb  season_2021_22_gw_1.json  stats.csv  xP_raw_complete.ipynb  xP_raw_complete_2020_2021.ipynb
src/: constants.py  run.py  run_scripts.py  utilities.py
src/fbref/: collections.py  constants.py  scraper.py  utilities.py
src/fpl/: downloader.py
src/notebooks/: data sources combined.ipynb  data-sources-combined.ipynb
tests/: test_fpl_stats_streamlit.py
