[tool.poetry]
name = "fpl-stats-streamlit"
version = "0.1.0"
description = ""
authors = ["Prathamesh Sarang <prathamesh.b.sarang@gmail.com>"]

[tool.poetry.scripts]
"fbref_scraper" = "scripts:fbref_scraper"

[tool.poetry.dependencies]
python = "^3.8.6"
click = "^7.1.2"
streamlit = "^0.69.2"
loguru = "^0.5.3"
pandas = "^1.1.3"
install = "^1.3.4"
jsonschema = "3.0.2"
lxml = "^4.6.1"
beautifulsoup4 = "^4.9.3"
coconut = "^1.4.3"
pipetools = "^0.3.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
fastcore = "^1.2.5"
matplotlib = "^3.3.2"
understat = "^0.1.3"
idna_ssl = "^1.1.0"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
yapf = "^0.30.0"
jupyter_nbextensions_configurator = "^0.4.1"
pre-commit = "^2.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
