[tool.poetry]
name = "fpl-stats-streamlit"
version = "0.1.0"
description = ""
authors = ["Prathamesh Sarang <prathamesh.b.sarang@gmail.com>"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.poetry.scripts]
lint = "scripts:lint"
tests = "scripts:test"
"fbref_scraper" = "scripts:fbref_scraper"
"fpl_data_fetcher" = "scripts:fpl_data_fetcher"

[tool.poetry.dependencies]
python = "^3.8.6"
click = "^7.1.2"
streamlit = "^0.69.2"
loguru = "^0.5.3"
pandas = "^1.1.3"
install = "^1.3.4"
jsonschema = "3.0.2"
lxml = "^4.6.1"
beautifulsoup4 = "^4.9.3"
coconut = "^1.4.3"
pipetools = "^0.3.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
fastcore = "^1.2.5"
matplotlib = "^3.3.2"
understat = "^0.1.3"
idna_ssl = "^1.1.0"
python-dotenv = "^0.15.0"
fuzzywuzzy = "^0.18.0"
boto3 = "^1.16.59"
python-Levenshtein = "^0.12.1"
p-tqdm = "^1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
jupyter_nbextensions_configurator = "^0.4.1"
pre-commit = "^2.9.3"
isort = "^5.7.0"
autoflake = "^1.4"
black = {version = "20.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
