[tool.poetry]
name = "fpl-stats-utilities"
version = "0.1.0"
description = ""
authors = ["Prathamesh Sarang <prthamesh.sarang@gmail.com>"]
packages = [
    { include = "src/" },
    { include = "tests/" },
    { include = "scripts.py"}
]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.poetry.scripts]
lint = "scripts:lint"
tests = "scripts:test"
fbref_scraper = "scripts:fbref_scraper"
fpl_data_fetcher = "scripts:fpl_data_fetcher"
stats_combiner = "scripts:run_stats_combiner"

[tool.poetry.dependencies]
python = "^3.8.6"
click = "^7.1.2"
loguru = "^0.5.3"
pandas = "^1.1.3"
install = "^1.3.4"
jsonschema = "3.0.2"
lxml = "^4.6.1"
beautifulsoup4 = "^4.9.3"
coconut = "^1.4.3"
pipetools = "^0.3.6"
alembic = "^1.4.3"
sqlalchemy = "^1.3.20"
fastcore = "^1.2.5"
matplotlib = "^3.3.2"
understat = "^0.1.3"
idna_ssl = "^1.1.0"
python-dotenv = "^0.15.0"
fuzzywuzzy = "^0.18.0"
boto3 = "1.16.25"
python-Levenshtein = "^0.12.1"
p-tqdm = "^1.3.3"
s3fs = "^0.5.2"
numpy = "^1.20.0"
soccerplots = "^1.0.0"
PuLP = "^2.4"
rich = "^10.6.0"
altair = "^4.1.0"
missingno = "^0.5.0"
pandas-profiling = "^3.0.0"
dfply = "^0.3.3"
html5lib = "^1.1"
xgboost = "^1.4.2"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
jupyter_nbextensions_configurator = "^0.4.1"
pre-commit = "^2.9.3"
isort = "^5.7.0"
autoflake = "^1.4"
black = {version = "20.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
